// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleDataCard installed renders with app links 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--leftAligned euiCard--hasBetaBadge emotion-euiPanel-grow-m-m-plain-hasShadow"
  data-test-subj="sampleDataSetCardsample-data-set"
>
  <div
    class="euiCard__top"
  >
    <div
      class="euiCard__image"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Sample Data Set
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        This is a sample data set you can use.
      </p>
    </div>
  </div>
  <span
    class="euiCard__betaBadgeWrapper"
  >
    <span
      class="euiBetaBadge euiBetaBadge--hollow euiCard__betaBadge"
      id="generated-idBetaBadge"
      title="installed"
    >
      installed
    </span>
  </span>
  <div
    class="euiCard__footer"
  >
    <div
      class="euiFlexGroup euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="Remove Sample Data Set"
          class="euiButtonEmpty euiButtonEmpty--danger euiButtonEmpty--flushLeft"
          data-test-subj="removeSampleDataSetsample-data-set"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Remove
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiPopover emotion-euiPopover"
          data-test-subj="launchSampleDataSetsample-data-set"
          id="sampleDataLinkssample-data-set"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <button
              aria-label="View Sample Data Set"
              class="euiButton euiButton--primary"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonContent--iconRight euiButton__content"
              >
                <span
                  class="euiButtonContent__icon"
                  color="inherit"
                  data-euiicon-type="arrowDown"
                />
                <span
                  class="euiButton__text"
                >
                  View data
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleDataCard installed renders without app links 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--leftAligned euiCard--hasBetaBadge emotion-euiPanel-grow-m-m-plain-hasShadow"
  data-test-subj="sampleDataSetCardsample-data-set"
>
  <div
    class="euiCard__top"
  >
    <div
      class="euiCard__image"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Sample Data Set
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        This is a sample data set you can use.
      </p>
    </div>
  </div>
  <span
    class="euiCard__betaBadgeWrapper"
  >
    <span
      class="euiBetaBadge euiBetaBadge--hollow euiCard__betaBadge"
      id="generated-idBetaBadge"
      title="installed"
    >
      installed
    </span>
  </span>
  <div
    class="euiCard__footer"
  >
    <div
      class="euiFlexGroup euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="Remove Sample Data Set"
          class="euiButtonEmpty euiButtonEmpty--danger euiButtonEmpty--flushLeft"
          data-test-subj="removeSampleDataSetsample-data-set"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Remove
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="View Sample Data Set"
          class="euiButton euiButton--primary"
          data-test-subj="launchSampleDataSetsample-data-set"
          type="button"
        >
          <span
            class="euiButtonContent euiButton__content"
          >
            <span
              class="euiButton__text"
            >
              View data
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleDataCard not installed renders 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard euiCard--leftAligned emotion-euiPanel-grow-m-m-plain-hasShadow"
  data-test-subj="sampleDataSetCardsample-data-set"
>
  <div
    class="euiCard__top"
  >
    <div
      class="euiCard__image"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title emotion-euiTitle-s"
      id="generated-idTitle"
    >
      Sample Data Set
    </span>
    <div
      class="euiText euiCard__description emotion-euiText-s"
      id="generated-idDescription"
    >
      <p>
        This is a sample data set you can use.
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="Add Sample Data Set"
          class="euiButton euiButton--primary"
          data-test-subj="addSampleDataSetsample-data-set"
          type="button"
        >
          <span
            class="euiButtonContent euiButton__content"
          >
            <span
              class="euiButton__text"
            >
              Add data
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
